api/src/graphql/snapshots/api__graphql__test__revision.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1062
expression: created
---
[data.wasRevisionOf]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
