api/src/graphql/snapshots/api__graphql__test__untyped_derivation-2.snap
---
source: api/src/graphql/mod.rs
assertion_line: 979
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
