api/src/graphql/snapshots/api__graphql__test__untyped_derivation.snap
---
source: api/src/graphql/mod.rs
assertion_line: 964
expression: created
---
[data.wasDerivedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
